--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,10 @@ a {
 p, h3, h1, h2 {
     margin: 0px;
 }
+input, textarea {
+    color: var(--font-color);
+    background-color: var(--background-color);
+}
 
 .buttonGeneric {
     padding: 6px 10px;
@@ -56,4 +60,17 @@ p, h3, h1, h2 {
 .genericLink {
     color: var(--link-blue);
     cursor: pointer;
+}
+
+.inputField {
+    display: flex;
+    justify-content: center;
+    height: 42px;
+    background: var(--background-color);
+    border: 2px solid var(--border-black);
+    border-radius: 12px;
+    padding: 8px 16px;
+    margin: 10px 0px;
+    width: auto;
+    max-width: 600px;
 }
